# DelayLama

./: .gitignore  .gitmodules  BuildCmake.bat  BuildVC6Debug.bat  BuildVC6Release.bat  CMakeLists.txt  CMakePresets.json  ConfigureCmake.bat  GetProgress.bat  LocalPaths.bat  LocalPaths.bat.template  README.md  exports.def  extract_assets.py  progress.html  reccmp-project.yml  reccmp-user.yml  resources.rc
.github/workflows/: reccmp-progress.yml  tests.yml
assets/reconstructed/: README.md
cmake/: toolchain-vc6.cmake
docs/: analysis.md  class-analysis.md  function_map.json
original/: readme.md
original/decomp/: DelayLamaDataStructs.h  DelayLamaFunctions.h
original/docs/: manual.md  press_release.md
src/core/: DelayLamaAudio.cpp  DelayLamaAudio.h  DelayLamaPlugin.cpp  DelayLamaPlugin.h  DllMain.cpp  PluginConfig.h  SpeechConstants.h  VSTPluginMain.cpp
src/damsdk/: .gitattributes  AudioBase.cpp  AudioBase.h  AudioBaseExtended.cpp  AudioBaseExtended.h  DamPlugin.h  EditorBase.cpp  EditorBase.h  LICENSE  readme.md
src/damsdk/api/: AudioBase.cpp  AudioBase.h  AudioBaseExtended.cpp  AudioBaseExtended.h  DamPlugin.h  EditorBase.cpp  EditorBase.h
src/damsdk/gui/base/: View.cpp  View.h  Window.cpp  Window.h
src/damsdk/gui/controls/: HorizontalSlider.cpp  HorizontalSlider.h  Knob.cpp  Knob.h  RotaryControl.cpp  RotaryControl.h  TwoAxisSlider.cpp  TwoAxisSlider.h  VerticalSlider.cpp  VerticalSlider.h  control.cpp  control.h
src/damsdk/gui/platform/windows/: Bitmap.cpp  Bitmap.h  DropTarget.cpp  DropTarget.h  GDIDrawingContext.cpp  GDIDrawingContext.h  OffscreenGDIDrawingContext.cpp  OffscreenGDIDrawingContext.h  Window.cpp  Window.h
src/gui/base/: View.cpp  View.h  Window.cpp  Window.h
src/gui/controls/: Monk.cpp  Monk.h  SplashScreen.cpp  SplashScreen.h  TileGrid.cpp  TileGrid.h  control.cpp  control.h
src/gui/editor/: DelayLamaEditor.cpp  DelayLamaEditor.h
src/platform/: Bitmap.cpp  Bitmap.h  GDIDrawingContext.cpp  GDIDrawingContext.h  Resource.h
src/reference/: OriginalInternal.cpp  OriginalInternal.h
src/utils/: AudioDebugUtils.h  Logger.cpp  Logger.h  portable_stdint.h
tests/: DelayLamaAudioInitTest.cpp
tests/fixtures/: DelayLamaAudioState.json
